<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.5"
    android:background="@mipmap/allianzp_foreground"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="287dp"
        android:layout_height="208dp"
        android:layout_marginBottom="70dp"
        android:background="@mipmap/sourceballt_foreground"
        android:shadowColor="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/editTextFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextFacebook"
        android:layout_width="288dp"
        android:layout_height="68dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="283dp"
        android:layout_height="62dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFacebook"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="83dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="121dp"
        android:layout_height="74dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="49dp"
        android:backgroundTint="@color/button"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonClean"
        app:layout_constraintTop_toBottomOf="@+id/editTextFacebook"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonClean"
        android:layout_width="121dp"
        android:layout_height="74dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="49dp"
        android:backgroundTint="@color/button"
        android:text="@string/clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>